css/_slide.css
#slide1, #slide2, #slide3  {
    animation: slide 3s forwards alternate, 
    appear 2s linear alternate;
    animation-delay: 1s;
    background-color: var(--background-primary);
    height: 100px;
    opacity: 0;
    position: absolute;
    padding-bottom:1rem;
    padding-top:1rem;
    top: -300px;
    width: 100%;
    -webkit-animation: appear 2s forwards;
    -webkit-animation-delay: 2s;
}

#slide1 {
    animation-delay: 0.1s;
    -webkit-animation-delay: 0.1s;
}

#slide2 {
    background-color:var(--background-secondary);
}


#slide2:hover, #slide3:hover  {
    cursor: pointer;
    background-color: #E5E0DC;
}

.mail, .phone, .message {
    font-size: 0.9rem;
}

span:not(.btn-command), .phone
{
    display: none;
}

@media screen and (min-width: 500px) 
{
    .message {
        display: none;
    }
    
    #slide1, #slide2 
    {   
        height: 150px;
    }

    #slide3  {
       
        height: 180px;
        padding-bottom:2rem;
    }

    .mail, .phone {
        font-size: 1.3rem;   
    }

    .mail:hover, .message:hover, .phone:hover {
        color: var(--font-color-primary);
        font-size: 1.3rem;
        font-weight: bolder;
       
    }

    .message {
        padding: auto;
    }
    span 
    {
        display: inline-block;
        font-size: 1.3rem;
    }

    .phone
    {
        color: var(--font-color-secondary);
        display: inline;
        transition: var(--transition);
    }
}

@keyframes slide {

    100% { top: 0; opacity: 1 }
}


@-webkit-keyframes slide {

    100% { top: 0; opacity: 1 }
}

@keyframes appear {
    50% {top: 0; opacity: 0.5 }

    100% { top: 0; opacity: 1 }
}

@-webkit-keyframes appear {
    50% { top: 0; opacity: 0.5 }

    100% { top: 0; opacity: 1 }
}

